--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dermboutique",
+  "name": "dermboutiqu",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,12 +11,12 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "next": "14.2.5"
   },
   "devDependencies": {
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.7"
+    "eslint-config-next": "14.2.5"
   }
 }
